Fix spacing issues

--- a/app/assets/stylesheets/base/_body.scss
+++ b/app/assets/stylesheets/base/_body.scss
@@ -82,6 +82,7 @@ body.score-show {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  padding: 3rem;
 }
 
 body.dashboard {
@@ -106,6 +107,7 @@ body.profile {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  padding: 3rem;
 }
 
 body.location {
